--- a/assets/workflow/config.json
+++ b/assets/workflow/config.json
@@ -1,179 +1,182 @@
 {
-    "3": {
-      "inputs": {
-        "seed": 643759397745416,
-        "steps": 25,
-        "cfg": 7,
-        "sampler_name": "euler",
-        "scheduler": "karras",
-        "denoise": 1,
-        "model": [
-          "23",
-          0
-        ],
-        "positive": [
-          "6",
-          0
-        ],
-        "negative": [
-          "7",
-          0
-        ],
-        "latent_image": [
-          "5",
-          0
-        ]
-      },
-      "class_type": "KSampler",
-      "_meta": {
-        "title": "K采样器"
-      }
+  "3": {
+    "inputs": {
+      "seed": 963504026888426,
+      "steps": 30,
+      "cfg": 7,
+      "sampler_name": "dpmpp_2m",
+      "scheduler": "karras",
+      "denoise": 1,
+      "model": [
+        "33",
+        0
+      ],
+      "positive": [
+        "6",
+        0
+      ],
+      "negative": [
+        "7",
+        0
+      ],
+      "latent_image": [
+        "5",
+        0
+      ]
     },
-    "4": {
-      "inputs": {
-        "ckpt_name": "waiNSFWIllustrious_v140.safetensors"
-      },
-      "class_type": "CheckpointLoaderSimple",
-      "_meta": {
-        "title": "Checkpoint加载器（简易）"
-      }
+    "class_type": "KSampler",
+    "_meta": {
+      "title": "K采样器"
+    }
+  },
+  "4": {
+    "inputs": {
+      "ckpt_name": "waiNSFWIllustrious_v140.safetensors"
     },
-    "5": {
-      "inputs": {
-        "width": 768,
-        "height": 1536,
-        "batch_size": 1
-      },
-      "class_type": "EmptyLatentImage",
-      "_meta": {
-        "title": "空Latent图像"
-      }
+    "class_type": "CheckpointLoaderSimple",
+    "_meta": {
+      "title": "Checkpoint加载器（简易）"
+    }
+  },
+  "5": {
+    "inputs": {
+      "width": 1080,
+      "height": 1920,
+      "batch_size": 1
     },
-    "6": {
-      "inputs": {
-        "text": "embedding:lazypos, agrirl, solo, beautiful, school",
-        "clip": [
-          "23",
-          1
-        ]
-      },
-      "class_type": "CLIPTextEncode",
-      "_meta": {
-        "title": "CLIP文本编码"
-      }
+    "class_type": "EmptyLatentImage",
+    "_meta": {
+      "title": "空Latent图像"
+    }
+  },
+  "6": {
+    "inputs": {
+      "text": "embedding:lazypos, agirl, white hair, long hair, glamorous, wet lips, scheming expression, standing next to young man, wearing cheap clothes, sneering and mocking, indoor parking lot with luxury car, silver Pagani Huayra, dramatic lighting, masterpiece, detailed",
+      "clip": [
+        "33",
+        1
+      ]
     },
-    "7": {
-      "inputs": {
-        "text": "lazyneg,",
-        "clip": [
-          "4",
-          1
-        ]
-      },
-      "class_type": "CLIPTextEncode",
-      "_meta": {
-        "title": "CLIP文本编码"
-      }
+    "class_type": "CLIPTextEncode",
+    "_meta": {
+      "title": "CLIP文本编码"
+    }
+  },
+  "7": {
+    "inputs": {
+      "text": "lazyneg, modern, recent, old, oldest, cartoon, graphic, drawing, blurry, sketches, ugly, messy, watermark, text, signature, simple background, conjoined, bad ai-generated, 3d",
+      "clip": [
+        "4",
+        1
+      ]
     },
-    "8": {
-      "inputs": {
-        "samples": [
-          "3",
-          0
-        ],
-        "vae": [
-          "4",
-          2
-        ]
-      },
-      "class_type": "VAEDecode",
-      "_meta": {
-        "title": "VAE解码"
-      }
+    "class_type": "CLIPTextEncode",
+    "_meta": {
+      "title": "CLIP文本编码"
+    }
+  },
+  "8": {
+    "inputs": {
+      "samples": [
+        "3",
+        0
+      ],
+      "vae": [
+        "4",
+        2
+      ]
     },
-    "9": {
-      "inputs": {
-        "filename_prefix": "ComfyUI",
-        "images": [
-          "21",
-          0
-        ]
-      },
-      "class_type": "SaveImage",
-      "_meta": {
-        "title": "保存图像"
-      }
+    "class_type": "VAEDecode",
+    "_meta": {
+      "title": "VAE解码"
+    }
+  },
+  "13": {
+    "inputs": {
+      "lora_name": "Dot_Comics-000018.safetensors",
+      "strength_model": 0.5000000000000001,
+      "strength_clip": 0.5000000000000001,
+      "model": [
+        "4",
+        0
+      ],
+      "clip": [
+        "4",
+        1
+      ]
     },
-    "13": {
-      "inputs": {
-        "lora_name": "Dot_Comics-000018.safetensors",
-        "strength_model": 1,
-        "strength_clip": 1,
-        "model": [
-          "4",
-          0
-        ],
-        "clip": [
-          "4",
-          1
-        ]
-      },
-      "class_type": "LoraLoader",
-      "_meta": {
-        "title": "加载LoRA"
-      }
+    "class_type": "LoraLoader",
+    "_meta": {
+      "title": "加载LoRA"
+    }
+  },
+  "31": {
+    "inputs": {
+      "lora_name": "Takarada_Rikka_Illustrious.safetensors",
+      "strength_model": 1.0000000000000002,
+      "strength_clip": 1.0000000000000002,
+      "model": [
+        "13",
+        0
+      ],
+      "clip": [
+        "13",
+        1
+      ]
     },
-    "20": {
-      "inputs": {
-        "model_name": "2x_AniSD_RealPLKSR_140K.pth"
-      },
-      "class_type": "UpscaleModelLoader",
-      "_meta": {
-        "title": "加载放大模型"
-      }
+    "class_type": "LoraLoader",
+    "_meta": {
+      "title": "加载LoRA"
+    }
+  },
+  "32": {
+    "inputs": {
+      "lora_name": "TrendCraft_The_Peoples_Style_Detailer-v2.4I-5_18_2025-Illustrious.safetensors",
+      "strength_model": 0.5000000000000001,
+      "strength_clip": 0.5000000000000001,
+      "model": [
+        "31",
+        0
+      ],
+      "clip": [
+        "31",
+        1
+      ]
     },
-    "21": {
-      "inputs": {
-        "upscale_model": [
-          "20",
-          0
-        ],
-        "image": [
-          "8",
-          0
-        ]
-      },
-      "class_type": "ImageUpscaleWithModel",
-      "_meta": {
-        "title": "使用模型放大图像"
-      }
+    "class_type": "LoraLoader",
+    "_meta": {
+      "title": "加载LoRA"
+    }
+  },
+  "33": {
+    "inputs": {
+      "lora_name": "noobai_ep11_stabilizer_v0.205_fp16.safetensors",
+      "strength_model": 1,
+      "strength_clip": 1,
+      "model": [
+        "32",
+        0
+      ],
+      "clip": [
+        "32",
+        1
+      ]
     },
-    "23": {
-      "inputs": {
-        "lora_name": "noobai_ep11_stabilizer_v0.205_fp16.safetensors",
-        "strength_model": 1,
-        "strength_clip": 1,
-        "model": [
-          "13",
-          0
-        ],
-        "clip": [
-          "13",
-          1
-        ]
-      },
-      "class_type": "LoraLoader",
-      "_meta": {
-        "title": "加载LoRA"
-      }
+    "class_type": "LoraLoader",
+    "_meta": {
+      "title": "加载LoRA"
+    }
+  },
+  "save_image_websocket_node": {
+    "inputs": {
+      "images": [
+        "8",
+        0
+      ]
     },
-    "save_image_websocket_node": {
-      "class_type": "SaveImageWebsocket",
-      "inputs": {
-          "images": [
-              "8",
-              0
-          ]
-      }
+    "class_type": "SaveImageWebsocket",
+    "_meta": {
+      "title": "保存图像（网络接口）"
+    }
   }
 }
