📦chore: 新增 deepspeed 依赖以支持模型训练
--------------📎Detail--------------
在项目的依赖中添加了 deepspeed 版本 0.17.1，以提升模型训练的性能和效率。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "charset-normalizer>=3.4.2",
+    "deepspeed>=0.17.1",
     "dotenv>=0.9.9",
     "edge-tts>=7.0.2",
     "faster-whisper>=1.1.1",
