--- a/assets/workflow/config.json
+++ b/assets/workflow/config.json
@@ -1,14 +1,14 @@
 {
   "3": {
     "inputs": {
-      "seed": 823656836716786,
+      "seed": 484623610437012,
       "steps": 30,
       "cfg": 7,
-      "sampler_name": "dpmpp_2m",
+      "sampler_name": "dpmpp_3m_sde_gpu",
       "scheduler": "karras",
       "denoise": 1,
       "model": [
-        "33",
+        "32",
         0
       ],
       "positive": [
@@ -31,7 +31,7 @@
   },
   "4": {
     "inputs": {
-      "ckpt_name": "waiNSFWIllustrious_v140.safetensors.safetensors"
+      "ckpt_name": "waiNSFWIllustrious_v140.safetensors"
     },
     "class_type": "CheckpointLoaderSimple",
     "_meta": {
@@ -51,9 +51,9 @@
   },
   "6": {
     "inputs": {
-      "text": "embedding:lazypos, agirl, white hair, long hair, glamorous, wet lips, scheming expression, standing next to young man, wearing cheap clothes, sneering and mocking, indoor parking lot with luxury car, silver Pagani Huayra, dramatic lighting, masterpiece, detailed",
+      "text": "1girl,looking at viewer,facing viewer, front viewer,  <lora:alisa_mikhailovna_kujou_roshidere_s1-ixl-anime-soralz:1> alisa mikhailovna kujou (roshidere),long hair, silver hair,ahoge,crossed bangs,hair ribbon,red ribbon,sidelocks,blue eye,large breasts,school uniform, grey jacket, open jacket, long sleeves, red bowtie, white shirt, collared shirt, buttons, black vest, pleated skirt, white thighhighs, <lora:incoming-headpat-illustriousxl-lora-nochekaiser:1>  incoming headpat, headpat, pov, outstretched arm, reaching, reaching towards viewer, looking at viewer, breasts,digital illustration,1girl, masterpiece, best quality,highres",
       "clip": [
-        "33",
+        "32",
         1
       ]
     },
@@ -64,7 +64,7 @@
   },
   "7": {
     "inputs": {
-      "text": "lazyneg, modern, recent, old, oldest, cartoon, graphic, drawing, blurry, sketches, ugly, messy, watermark, text, signature, simple background, conjoined, bad ai-generated, 3d",
+      "text": "lazyneg, blurry, lowres, worst quality, low quality, bad anatomy, bad hands, multiple views, jpeg artifacts, signature, watermark, text, logo, artist name,simple background, white background, bad quality, worst quality, disfigured, missing limbs, text,bad quality,sketch,(extra fingers), (censor)Z",
       "clip": [
         "4",
         1
@@ -94,14 +94,33 @@
   "13": {
     "inputs": {
       "lora_name": "Dot_Comics-000018.safetensors",
-      "strength_model": 0.5000000000000001,
-      "strength_clip": 0.5000000000000001,
+      "strength_model": 0.5000000000000002,
+      "strength_clip": 0.5000000000000002,
       "model": [
         "4",
         0
       ],
       "clip": [
         "4",
+        1
+      ]
+    },
+    "class_type": "LoraLoader",
+    "_meta": {
+      "title": "加载LoRA"
+    }
+  },
+  "31": {
+    "inputs": {
+      "lora_name": "alisa_mikhailovna_kujou-roshidere_s1-ixl-anime-soralz.safetensors",
+      "strength_model": 1.0000000000000002,
+      "strength_clip": 1.0000000000000002,
+      "model": [
+        "13",
+        0
+      ],
+      "clip": [
+        "13",
         1
       ]
     },
@@ -112,34 +131,15 @@
   },
   "32": {
     "inputs": {
-      "lora_name": "TrendCraft_The_Peoples_Style_Detailer-v2.4I-5_18_2025-Illustrious.safetensors",
-      "strength_model": 0.5000000000000001,
-      "strength_clip": 0.5000000000000001,
-      "model": [
-        "13",
-        0
-      ],
-      "clip": [
-        "13",
-        1
-      ]
-    },
-    "class_type": "LoraLoader",
-    "_meta": {
-      "title": "加载LoRA"
-    }
-  },
-  "33": {
-    "inputs": {
-      "lora_name": "noobai_ep11_stabilizer_v0.205_fp16.safetensors",
+      "lora_name": "masachika_kuze_anime-soralz.safetensors",
       "strength_model": 1.0000000000000002,
       "strength_clip": 1.0000000000000002,
       "model": [
-        "32",
+        "31",
         0
       ],
       "clip": [
-        "32",
+        "31",
         1
       ]
     },
