--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,8 @@
 [submodule "index-tts"]
 	path = index-tts
 	url = https://github.com/index-tts/index-tts.git
-	branch = main
+	branch = indextts_v2
+[submodule "ComfyUI"]
+	path = ComfyUI
+	url = https://github.com/comfyanonymous/ComfyUI.git
+	branch = master
