--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "faster-whisper>=1.1.1",
     "google-genai>=1.19.0",
     "httpx[socks]>=0.28.1",
-    "indextts",
     "jieba>=0.42.1",
     "moviepy>=2.2.1",
     "parsel>=1.10.0",
@@ -33,4 +32,4 @@ url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
 
 [tool.uv.sources]
-indextts = { path = "index-tts" }
+# indextts = { path = "index-tts" }
