--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,21 +9,15 @@ dependencies = [
     "deepspeed>=0.17.1",
     "dotenv>=0.9.9",
     "edge-tts>=7.0.2",
-    "faster-whisper>=1.1.1",
-    "google-genai>=1.19.0",
     "httpx[socks]>=0.28.1",
     "jieba>=0.42.1",
+    "mcp>=1.13.1",
     "moviepy>=2.2.1",
     "parsel>=1.10.0",
     "pillow>=11.2.1",
-    "pydantic-ai[logfire]>=0.2.16",
-    "pydub>=0.25.1",
-    "pynini",
-    "pysrt>=1.1.2",
+    "pydantic-ai>=0.8.1",
+    "pydantic-ai-slim[mcp]>=0.8.1",
     "requests>=2.32.4",
-    "torch",
-    "torchaudio",
-    "torchvision",
     "websocket-client>=1.8.0",
 ]
 
