--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,16 @@ dependencies = [
     "deepspeed>=0.17.1",
     "dotenv>=0.9.9",
     "edge-tts>=7.0.2",
+    "fastapi>=0.116.1",
     "httpx[socks]>=0.28.1",
     "jieba>=0.42.1",
     "mcp>=1.13.1",
     "moviepy>=2.2.1",
     "parsel>=1.10.0",
     "pillow>=11.2.1",
-    "pydantic-ai>=0.8.1",
-    "pydantic-ai-slim[mcp]>=0.8.1",
+    "pydantic-ai==0.7.0",
     "requests>=2.32.4",
+    "uvicorn>=0.34.3",
     "websocket-client>=1.8.0",
 ]
 
