--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@copilotkit/react-core": "^1.10.3",
     "@copilotkit/react-ui": "^1.10.3",
     "@copilotkit/runtime": "^1.10.3",
+    "@heroicons/react": "^2.2.0",
+    "antd": "^5.27.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
