Implement code changes to enhance functionality and improve performance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "moviepy>=2.2.1",
     "parsel>=1.10.0",
     "pillow>=11.2.1",
-    "pydantic-ai==0.7.0",
+    "pydantic-ai==1.0.0b1",
+    "pydantic-ai-slim[ag-ui]==1.0.0b1",
     "requests>=2.32.4",
     "uvicorn>=0.34.3",
     "websocket-client>=1.8.0",
